Fix Layout Content overflowing to below the sidebar

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,4 +1,6 @@
 .layout-container {
+  display: flex;
+  flex-direction: row;
   height: 100%;
   max-height: 100vh;
 }
